add pics for hero and carrousel

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="css/animations.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="icon" href="./img/logo.jpg" type="image/icon type" />
     <title>Kytos</title>
     <style>
@@ -165,25 +165,25 @@
               >First Slide</span
             >
             <img
-              src="./img/oie_3wSDJH199s3g.jpg"
-              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
-              alt="..."
+              src="./img/cartel3.jpeg"
+              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2 brightness-50"
+              alt="logo kytos"
             />
           </div>
           <!-- Item 2 -->
           <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img
-              src="https://flowbite.com/docs/images/carousel/carousel-2.svg"
-              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
-              alt="..."
+              src="./img/pilates.jpeg"
+              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2 brightness-50"
+              alt="sala de pilates"
             />
           </div>
           <!-- Item 3 -->
           <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img
-              src="https://flowbite.com/docs/images/carousel/carousel-3.svg"
-              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
-              alt="..."
+              src="./img/sala.jpeg"
+              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2 brightness-50"
+              alt="aparatos"
             />
           </div>
         </div>
@@ -266,21 +266,13 @@
         </button>
       </div>
 
-      <p class="mt-5">
-        This carousel slider component is part of a larger, open-source library
-        of Tailwind CSS components. Learn more by going to the official
-        <a
-          class="text-blue-600 hover:underline"
-          href="https://flowbite.com/docs/getting-started/introduction/"
-          target="_blank"
-        >
-          Flowbite Documentation </a
-        >.
+      <p class="mt-5 uppercase text-center">
+        Rehabilitacion deportiva. Pilates. RPG. Ortopedia
       </p>
       <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
     </div>
     <!-- ABOUT US -->
-    <div class="my-20 flex p-10">
+    <div class="grid-cols-1 my-20 md:flex p-10">
       <div>
         <h1
           class="text-center max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none mx-auto"
@@ -299,9 +291,9 @@
       </div>
 
       <img
-        src="./img/oie_3wSDJH199s3g.jpg"
+        src="./img/frente1.jpeg"
         alt="logo kytos"
-        class="w-[60%] mx-auto"
+        class="w-full md:w-[60%] mx-auto rounded-lg"
       />
     </div>
     <!-- HERO 2 -->
