--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -70,14 +70,6 @@
             <ul
               class="flex-col md:flex-row flex md:space-x-8 mt-4 md:mt-0 md:text-md md:font-medium"
             >
-              <li>
-                <a
-                  href="#"
-                  class="bg-blue-700 md:bg-transparent text-white block pl-3 pr-4 py-2 md:text-blue-700 md:p-0 rounded"
-                  aria-current="page"
-                  >Quienes somos</a
-                >
-              </li>
               <li>
                 <a
                   href="login.php"
@@ -273,7 +265,7 @@
     </div>
     <!-- ABOUT US -->
     <div class="grid-cols-1 my-20 md:flex p-10">
-      <div>
+      <div class="shadow-2xl">
         <h1
           class="text-center max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none mx-auto"
         >
@@ -647,34 +639,95 @@
     </div>
     <!-- GOOGLE MAPS LOCATATION -->
     <div class="md:flex mt-32">
-      <div>
+      <div class="md:w-[50%]">
         <h3
-          class="max-w-lg my-20 font-sans text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:leading-none mx-auto"
+          class="w-[50%] my-20 font-sans text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:leading-none mx-auto"
         >
           Donde nos encontras?
         </h3>
-        <button
-          href=""
-          class="text-indigo-700 border border-blue-300 py-4 px-6 rounded-xl inline-flex items-center h-[10%] w-[40%]"
+
+        <p class="w-[60%] text-left mx-auto">
+          Nos encontramos en Av. Edison 2044 de la ciudad de Mar del Plata, a
+          metros del centro comercial Edison. Te invitamos a contactarte por
+          telefono, segurinos por redes sociales y a
+          <a href="create-account.php" class="font-semibold underline"
+            >registrarte</a
+          >
+          como paciente para comenzar con tu tratamiento particular
+        </p>
+        <svg
+          class="mx-auto"
+          height="115px"
+          width="115px"
+          version="1.1"
+          id="Layer_1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 512 512"
+          xml:space="preserve"
+          fill="#000000"
         >
-          Contactanos
-          <svg
-            fill="none"
-            stroke="currentColor"
+          <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+          <g
+            id="SVGRepo_tracerCarrier"
             stroke-linecap="round"
             stroke-linejoin="round"
-            stroke-width="2"
-            viewBox="0 0 24 24"
-            class="w-6 h-6 ml-2"
-          >
-            <path d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
-          </svg>
-        </button>
+          ></g>
+          <g id="SVGRepo_iconCarrier">
+            <path
+              style="fill: #8ad5dd"
+              d="M256,0C114.608,0,0,114.608,0,256c0,141.376,114.608,256,256,256s256-114.624,256-256 C512,114.608,397.392,0,256,0z"
+            ></path>
+            <g style="opacity: 0.2">
+              <polygon
+                points="439.76,271.584 242.864,163.264 242.864,237.664 129.792,237.664 129.792,305.504 242.864,305.504 242.864,379.904 "
+              ></polygon>
+            </g>
+            <polygon
+              style="fill: #ffffff"
+              points="423.76,255.584 226.864,147.264 226.864,221.664 113.792,221.664 113.792,289.504 226.864,289.504 226.864,363.904 "
+            ></polygon>
+          </g>
+        </svg>
+        <h2
+          class="w-[50%] my-20 font-sans text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:leading-none mx-auto"
+        >
+          Por qué elegir Kytos?
+        </h2>
+        <p class="w-[60%] text-left mx-auto mt-32">
+          Porque entre otros muchos beneficios, los profesionales que desempeñan
+          sus tareas en nuestro espacio estan respaldados por instituciones como
+          las que siguen a continuación:
+        </p>
+        <div
+          class="grid grid-cols-2 md:grid-cols-3 gap-3 p-4 max-w-[70%] md:max-w-[70%] place-items-center mt-10 mx-auto"
+        >
+          <div>
+            <img
+              class="h-auto rounded-lg"
+              src="./img/resize_1505767991.jpg"
+              alt=""
+            />
+          </div>
+          <div>
+            <img class="h-auto rounded-lg" src="./img/logo-AAOT.png" alt="" />
+          </div>
+          <div>
+            <img
+              class="h-auto rounded-lg"
+              src="./img/Convoca-Distrito-x.png"
+              alt=""
+            />
+          </div>
+          <div>
+            <img class="h-auto rounded-lg" src="./img/oft.jpg" alt="" />
+          </div>
+        </div>
       </div>
 
       <div class="pb-[50%] relative w-[30%] mx-auto">
         <iframe
-          class="h-[100%] w-[100%] absolute left-0 top-0 rounded-lg"
+          class="h-[100%] w-[100%] absolute left-0 top-0 rounded-lg shadow-2xl"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3141.7467002753674!2d-57.56414512336222!3d-38.05298804774919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584de0ce1724e2f%3A0x83c49bddd4064a19!2sAv.%20Edison%202044%2C%20B7603%20Mar%20del%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1705457206341!5m2!1sen!2sar"
           width="600"
           height="450"
@@ -687,7 +740,7 @@
     </div>
 
     <!-- FOOTER -->
-    <footer class="bg-blue-300 h-96 text-black">
+    <footer class="bg-blue-300 h-96 text-black text-xl">
       <div
         class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8"
       >
@@ -696,37 +749,21 @@
             <img src="./img/logo.jpg" class="w-[50%] rounded-lg" alt="" />
           </div>
           <div class="space-y-2 text-sm">
-            <p class="text-black font-bold tracking-wide text-black">
-              Contacto
-            </p>
+            <p class="text-black font-bold tracking-wide text-xl">Contacto</p>
             <div class="flex">
-              <p class="mr-1 text-black">Telefono:</p>
-              <a
-                href="tel:850-123-5021"
-                aria-label="Our phone"
-                title="Our phone"
-                class="transition-colors duration-300 text-deep-purple-accent-400 hover:text-deep-purple-800"
-                >2235915750</a
-              >
+              <p class="mr-1 text-black text-xl">Telefono:</p>
+              <p class="text-xl">2235915750</p>
             </div>
 
             <div class="flex">
-              <p class="mr-1 text-black">Direccion:</p>
-              <a
-                href="https://www.google.com/maps/place/Av.+Edison+2044,+B7603+Mar+del+Plata,+Provincia+de+Buenos+Aires/@-38.052988,-57.5641451,17z/data=!3m1!4b1!4m6!3m5!1s0x9584de0ce1724e2f:0x83c49bddd4064a19!8m2!3d-38.0529923!4d-57.5615702!16s%2Fg%2F11kdlxwgtb?entry=ttu"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Our address"
-                title="Nuestra direccion"
-              >
-                Edison 2044, Mar del Plata
-              </a>
+              <p class="mr-1 text-black text-xl">Direccion:</p>
+              <p class="text-xl">Edison 2044, Mar del Plata</p>
             </div>
-            <p class="text-black font-bold tracking-wide text-black">
+            <p class="text-black font-bold tracking-wide text-xl">
               Nuestros horarios
             </p>
             <div class="flex">
-              <p class="mr-1 text-black">
+              <p class="mr-1 text-black text-xl">
                 Lunes a viernes de 8 hrs a 12 hrs - 16 hrs a 20 hrs
               </p>
             </div>
@@ -740,11 +777,147 @@
                 href="https://www.instagram.com/kytossaludintegral/"
                 class="text-black transition-colors duration-300 hover:text-deep-purple-accent-400"
               >
-                <svg viewBox="0 0 30 30" fill="currentColor" class="h-6">
-                  <circle cx="15" cy="15" r="4"></circle>
-                  <path
-                    d="M19.999,3h-10C6.14,3,3,6.141,3,10.001v10C3,23.86,6.141,27,10.001,27h10C23.86,27,27,23.859,27,19.999v-10   C27,6.14,23.859,3,19.999,3z M15,21c-3.309,0-6-2.691-6-6s2.691-6,6-6s6,2.691,6,6S18.309,21,15,21z M22,9c-0.552,0-1-0.448-1-1   c0-0.552,0.448-1,1-1s1,0.448,1,1C23,8.552,22.552,9,22,9z"
-                  ></path>
+                <svg
+                  width="45px"
+                  height="45px"
+                  viewBox="0 0 32 32"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g
+                    id="SVGRepo_tracerCarrier"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <rect
+                      x="2"
+                      y="2"
+                      width="28"
+                      height="28"
+                      rx="6"
+                      fill="url(#paint0_radial_87_7153)"
+                    ></rect>
+                    <rect
+                      x="2"
+                      y="2"
+                      width="28"
+                      height="28"
+                      rx="6"
+                      fill="url(#paint1_radial_87_7153)"
+                    ></rect>
+                    <rect
+                      x="2"
+                      y="2"
+                      width="28"
+                      height="28"
+                      rx="6"
+                      fill="url(#paint2_radial_87_7153)"
+                    ></rect>
+                    <path
+                      d="M23 10.5C23 11.3284 22.3284 12 21.5 12C20.6716 12 20 11.3284 20 10.5C20 9.67157 20.6716 9 21.5 9C22.3284 9 23 9.67157 23 10.5Z"
+                      fill="white"
+                    ></path>
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M16 21C18.7614 21 21 18.7614 21 16C21 13.2386 18.7614 11 16 11C13.2386 11 11 13.2386 11 16C11 18.7614 13.2386 21 16 21ZM16 19C17.6569 19 19 17.6569 19 16C19 14.3431 17.6569 13 16 13C14.3431 13 13 14.3431 13 16C13 17.6569 14.3431 19 16 19Z"
+                      fill="white"
+                    ></path>
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M6 15.6C6 12.2397 6 10.5595 6.65396 9.27606C7.2292 8.14708 8.14708 7.2292 9.27606 6.65396C10.5595 6 12.2397 6 15.6 6H16.4C19.7603 6 21.4405 6 22.7239 6.65396C23.8529 7.2292 24.7708 8.14708 25.346 9.27606C26 10.5595 26 12.2397 26 15.6V16.4C26 19.7603 26 21.4405 25.346 22.7239C24.7708 23.8529 23.8529 24.7708 22.7239 25.346C21.4405 26 19.7603 26 16.4 26H15.6C12.2397 26 10.5595 26 9.27606 25.346C8.14708 24.7708 7.2292 23.8529 6.65396 22.7239C6 21.4405 6 19.7603 6 16.4V15.6ZM15.6 8H16.4C18.1132 8 19.2777 8.00156 20.1779 8.0751C21.0548 8.14674 21.5032 8.27659 21.816 8.43597C22.5686 8.81947 23.1805 9.43139 23.564 10.184C23.7234 10.4968 23.8533 10.9452 23.9249 11.8221C23.9984 12.7223 24 13.8868 24 15.6V16.4C24 18.1132 23.9984 19.2777 23.9249 20.1779C23.8533 21.0548 23.7234 21.5032 23.564 21.816C23.1805 22.5686 22.5686 23.1805 21.816 23.564C21.5032 23.7234 21.0548 23.8533 20.1779 23.9249C19.2777 23.9984 18.1132 24 16.4 24H15.6C13.8868 24 12.7223 23.9984 11.8221 23.9249C10.9452 23.8533 10.4968 23.7234 10.184 23.564C9.43139 23.1805 8.81947 22.5686 8.43597 21.816C8.27659 21.5032 8.14674 21.0548 8.0751 20.1779C8.00156 19.2777 8 18.1132 8 16.4V15.6C8 13.8868 8.00156 12.7223 8.0751 11.8221C8.14674 10.9452 8.27659 10.4968 8.43597 10.184C8.81947 9.43139 9.43139 8.81947 10.184 8.43597C10.4968 8.27659 10.9452 8.14674 11.8221 8.0751C12.7223 8.00156 13.8868 8 15.6 8Z"
+                      fill="white"
+                    ></path>
+                    <defs>
+                      <radialGradient
+                        id="paint0_radial_87_7153"
+                        cx="0"
+                        cy="0"
+                        r="1"
+                        gradientUnits="userSpaceOnUse"
+                        gradientTransform="translate(12 23) rotate(-55.3758) scale(25.5196)"
+                      >
+                        <stop stop-color="#B13589"></stop>
+                        <stop offset="0.79309" stop-color="#C62F94"></stop>
+                        <stop offset="1" stop-color="#8A3AC8"></stop>
+                      </radialGradient>
+                      <radialGradient
+                        id="paint1_radial_87_7153"
+                        cx="0"
+                        cy="0"
+                        r="1"
+                        gradientUnits="userSpaceOnUse"
+                        gradientTransform="translate(11 31) rotate(-65.1363) scale(22.5942)"
+                      >
+                        <stop stop-color="#E0E8B7"></stop>
+                        <stop offset="0.444662" stop-color="#FB8A2E"></stop>
+                        <stop offset="0.71474" stop-color="#E2425C"></stop>
+                        <stop
+                          offset="1"
+                          stop-color="#E2425C"
+                          stop-opacity="0"
+                        ></stop>
+                      </radialGradient>
+                      <radialGradient
+                        id="paint2_radial_87_7153"
+                        cx="0"
+                        cy="0"
+                        r="1"
+                        gradientUnits="userSpaceOnUse"
+                        gradientTransform="translate(0.500002 3) rotate(-8.1301) scale(38.8909 8.31836)"
+                      >
+                        <stop offset="0.156701" stop-color="#406ADC"></stop>
+                        <stop offset="0.467799" stop-color="#6A45BE"></stop>
+                        <stop
+                          offset="1"
+                          stop-color="#6A45BE"
+                          stop-opacity="0"
+                        ></stop>
+                      </radialGradient>
+                    </defs>
+                  </g>
+                </svg>
+              </a>
+              <a
+                aria-label="Chat on WhatsApp"
+                href="https://wa.me/542235915750"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-label="WhatsApp"
+                  role="img"
+                  viewBox="0 0 512 512"
+                  width="45px"
+                  height="45px"
+                  fill="#000000"
+                >
+                  <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                  <g
+                    id="SVGRepo_tracerCarrier"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></g>
+                  <g id="SVGRepo_iconCarrier">
+                    <rect
+                      width="512"
+                      height="512"
+                      rx="15%"
+                      fill="#25d366"
+                    ></rect>
+                    <path
+                      fill="#25d366"
+                      stroke="#ffffff"
+                      stroke-width="26"
+                      d="M123 393l14-65a138 138 0 1150 47z"
+                    ></path>
+                    <path
+                      fill="#ffffff"
+                      d="M308 273c-3-2-6-3-9 1l-12 16c-3 2-5 3-9 1-15-8-36-17-54-47-1-4 1-6 3-8l9-14c2-2 1-4 0-6l-12-29c-3-8-6-7-9-7h-8c-2 0-6 1-10 5-22 22-13 53 3 73 3 4 23 40 66 59 32 14 39 12 48 10 11-1 22-10 27-19 1-3 6-16 2-18"
+                    ></path>
+                  </g>
                 </svg>
               </a>
             </div>
