--- a/index.html
+++ b/index.html
@@ -149,8 +149,8 @@
         </div>
       </nav>
     </div>
-    <!-- HERO -->
-    <!-- This is an example component -->
+
+    <!-- CAROUSEL-->
     <div class="w-full mx-auto">
       <div id="default-carousel" class="relative" data-carousel="static">
         <!-- Carousel wrapper -->
@@ -165,7 +165,7 @@
             >
             <img
               src="./img/cartel3.jpeg"
-              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2 brightness-50"
+              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
               alt="logo kytos"
             />
           </div>
@@ -173,7 +173,7 @@
           <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img
               src="./img/pilates.jpeg"
-              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2 brightness-50"
+              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
               alt="sala de pilates"
             />
           </div>
@@ -181,14 +181,14 @@
           <div class="hidden duration-700 ease-in-out" data-carousel-item>
             <img
               src="./img/sala.jpeg"
-              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2 brightness-50"
+              class="block absolute top-1/2 left-1/2 w-full -translate-x-1/2 -translate-y-1/2"
               alt="aparatos"
             />
           </div>
         </div>
         <!-- Slider indicators -->
         <div
-          class="flex absolute bottom-5 left-1/2 z-30 space-x-3 -translate-x-1/2"
+          class="flex absolute bottom-5 left-1/2 z-0 space-x-3 -translate-x-1/2"
         >
           <button
             type="button"
@@ -215,7 +215,7 @@
         <!-- Slider controls -->
         <button
           type="button"
-          class="flex absolute top-0 left-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
+          class="flex absolute top-0 left-0 z-0 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
           data-carousel-prev
         >
           <span
@@ -240,7 +240,7 @@
         </button>
         <button
           type="button"
-          class="flex absolute top-0 right-0 z-30 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
+          class="flex absolute top-0 right-0 z-0 justify-center items-center px-4 h-full cursor-pointer group focus:outline-none"
           data-carousel-next
         >
           <span
@@ -272,7 +272,7 @@
     </div>
     <!-- ABOUT US -->
     <div class="grid-cols-1 my-20 xl:flex p-10">
-      <div class="shadow-2xl p-8">
+      <div class="shadow-2xl p-8 rounded-md">
         <h1
           class="relative max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none mx-auto"
         >
@@ -306,7 +306,7 @@
     </div>
     <!-- HERO 2 -->
     <div
-      class="grid grid-cols-1 w-full py-16 space-y-6 lg:h-[38rem] lg:flex lg:py-16 lg:items-center xl:flex"
+      class="grid grid-cols-1 my-32 p-10 space-y-6 lg:h-[38rem] lg:flex lg:py-16 lg:items-center xl:flex"
     >
       <div class="w-full sm:w-[70%] lg:w-1/2 mx-auto">
         <div class="bg-white rounded-lg p-20 shadow-2xl">
@@ -325,7 +325,7 @@
             diversas areas, entre las que se encuentran las siguientes:
           </p>
           <div class="grid gap-6 mt-8 md:grid-cols-2 lg:grid-cols-3">
-            <div class="items-center text-black px-3">
+            <div class="items-center text-black px-3 mx-auto">
               <svg
                 class="md:w-[100%]"
                 fill="#0080ff"
@@ -366,7 +366,7 @@
               <span class="mx-3">Kinesiologia</span>
             </div>
 
-            <div class="flex items-center text-black">
+            <div class="items-center text-black mx-auto">
               <svg
                 fill="#0080ff"
                 height="105px"
@@ -394,7 +394,7 @@
               <span class="mx-3">Pilates</span>
             </div>
 
-            <div class="flex items-center text-black -px-3">
+            <div class="items-center text-black px-3 mx-auto">
               <svg
                 fill="#0080ff"
                 height="105px"
@@ -444,11 +444,11 @@
               <span class="mx-3">RPG</span>
             </div>
 
-            <div class="flex items-center text-black -px-3">
+            <div class="items-center text-black px-3 mx-auto">
               <svg
-                fill="##0080ff"
-                height="117px"
-                width="117px"
+                fill="#0080ff"
+                height="105px"
+                width="105px"
                 version="1.1"
                 id="_x31_"
                 xmlns="http://www.w3.org/2000/svg"
@@ -480,7 +480,7 @@
               <span class="mx-3">Acupuntura</span>
             </div>
 
-            <div class="flex items-center text-black -px-3">
+            <div class="items-center text-black px-3 mx-auto">
               <svg
                 fill="#0080ff"
                 height="105px"
@@ -524,7 +524,7 @@
               <span class="mx-3">Psicologia</span>
             </div>
 
-            <div class="flex items-center text-black -px-3">
+            <div class="items-center text-black px-3 mx-auto">
               <svg
                 width="105px"
                 height="105px"
@@ -611,7 +611,7 @@
 
               <span class="mx-3">Traumatologia</span>
             </div>
-            <div class="flex items-center text-black -px-3">
+            <div class="items-center text-black px-3 mx-auto">
               <svg
                 width="105px"
                 height="105px"
@@ -645,7 +645,7 @@
 
               <span class="mx-3">Oftalmología</span>
             </div>
-            <div class="flex items-center text-black -px-3">
+            <div class="items-center text-black px-3 mx-auto">
               <svg
                 fill="#0080ff"
                 version="1.1"
@@ -673,7 +673,7 @@
 
               <span class="mx-3">Neurología</span>
             </div>
-            <div class="flex items-center text-black -px-3">
+            <div class="items-center text-black px-3 mx-auto">
               <svg
                 fill="#0080ff"
                 height="105px"
@@ -746,9 +746,9 @@
         </div>
       </div>
 
-      <div class="flex items-center justify-center w-full h-96 lg:w-1/2">
+      <div class="items-center justify-center w-full h-96 lg:w-1/2">
         <img
-          class="object-cover w-full h-full max-w-2xl rounded-md"
+          class="object-cover w-full h-full max-w-2xl rounded-md mx-auto"
           src="./img/espacio.jpeg"
           alt="glasses photo"
         />
@@ -756,7 +756,7 @@
     </div>
     <!-- GRID PICS -->
     <h2
-      class="max-w-lg mt-40 font-sans text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:leading-none mx-auto"
+      class="max-w-lg mt-40 font-sans text-3xl text-center font-bold tracking-tight text-gray-900 sm:text-4xl sm:leading-none mx-auto"
     >
       Nuestro espacio
     </h2>
@@ -794,7 +794,7 @@
     <div class="md:flex mt-32 shadow-2xl">
       <div class="md:w-[50%] shadow-2xl">
         <h3
-          class="w-[50%] my-20 font-sans text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl sm:leading-none mx-auto"
+          class="w-[50%] my-20 font-sans text-3xl text-center font-bold tracking-tight text-gray-900 sm:text-4xl sm:leading-none mx-auto"
         >
           Donde nos encontras?
         </h3>
