fix minor details in sections 2 and 3

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       </div>
 
       <h2 class="mt-5 uppercase text-center">
-        Rehabilitacion deportiva. Pilates. RPG. Ortopedia
+        Rehabilitacion deportiva- Pilates-RPG-Ortopedia-Acupuntura
       </h2>
       <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
     </div>
@@ -304,7 +304,7 @@
         class="w-full xl:w-[50%] mx-auto rounded-lg"
       />
     </div>
-    <!-- HERO 2 -->
+    <!-- HERO 2/SECTION 2 -->
     <div
       class="grid grid-cols-1 my-32 p-10 space-y-6 lg:h-[38rem] lg:flex lg:py-16 lg:items-center xl:flex"
     >
@@ -754,7 +754,7 @@
         />
       </div>
     </div>
-    <!-- GRID PICS -->
+    <!-- GRID PICS/SECTION 3 -->
     <h2
       class="max-w-lg mt-40 font-sans text-3xl text-center font-bold tracking-tight text-gray-900 sm:text-4xl sm:leading-none mx-auto"
     >
@@ -790,9 +790,9 @@
         <img class="h-auto rounded-lg" src="./img/espacio8.jpeg" alt="" />
       </div>
     </div>
-    <!-- GOOGLE MAPS LOCATATION -->
+    <!-- GOOGLE MAPS LOCATION -->
     <div class="md:flex mt-32 shadow-2xl">
-      <div class="md:w-[50%] shadow-2xl">
+      <div class="md:w-[50%] shadow-2xl p-10">
         <h3
           class="w-[50%] my-20 font-sans text-3xl text-center font-bold tracking-tight text-gray-900 sm:text-4xl sm:leading-none mx-auto"
         >
@@ -809,7 +809,7 @@
           como paciente para comenzar con tu tratamiento particular
         </p>
         <svg
-          class="mx-auto"
+          class="hidden md:block mx-auto"
           height="115px"
           width="115px"
           version="1.1"
@@ -848,7 +848,7 @@
           >
             Por qué elegir Kytos?
           </h2>
-          <p class="w-[60%] text-left mx-auto mt-32">
+          <p class="w-[60%] text-left mx-auto mt-10">
             Porque entre otros muchos beneficios, los profesionales que
             desempeñan sus tareas en nuestro espacio estan respaldados por
             instituciones como las que siguen a continuación:
@@ -880,9 +880,9 @@
         </div>
       </div>
 
-      <div class="pb-[50%] relative w-[30%] mx-auto">
+      <div class="pb-[50%] relative w-full md:w-[30%] mx-auto my-10">
         <iframe
-          class="h-[100%] w-[100%] absolute left-0 top-0 rounded-lg shadow-2xl"
+          class="h-[100%] w-[100%] absolute left-0 top-0 rounded-lg shadow-2xl p-5"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3141.7467002753674!2d-57.56414512336222!3d-38.05298804774919!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584de0ce1724e2f%3A0x83c49bddd4064a19!2sAv.%20Edison%202044%2C%20B7603%20Mar%20del%20Plata%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1sen!2sar!4v1705457206341!5m2!1sen!2sar"
           width="600"
           height="450"
@@ -895,7 +895,7 @@
     </div>
 
     <!-- FOOTER -->
-    <footer class="bg-blue-900 h-[120%] text-white text-xl">
+    <footer class="bg-blue-900 h-[100%] text-white text-xl mt-10">
       <div
         class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8"
       >
