fix sections 2 and 3

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <script src="https://unpkg.com/flowbite@1.4.0/dist/flowbite.js"></script>
     </div>
     <!-- ABOUT US -->
-    <div class="grid-cols-1 my-20 xl:flex p-10">
+    <div class="grid-cols-1 my-5 xl:flex p-10">
       <div class="shadow-2xl p-8 rounded-md">
         <h1
           class="relative max-w-lg mb-6 font-sans text-3xl font-bold tracking-tight sm:text-4xl sm:leading-none mx-auto"
@@ -282,34 +282,30 @@
             >Kytos</span
           >
         </h1>
-
-        <p
-          class="text-base text-gray-700 md:text-lg mx-auto w-[50%] h-[50%] my-20"
-        >
-          KYTOS es un centro de rehabilitación integral en el cual en paciente
-          puede encontrar diferentes alternativas según su caso, las cuales van
-          desde Rehabilitación deportiva, postural y técnicas manuales hasta
-          Terapia Ocupacional, Oftalmología, Psicología, Psicopedagogía,
-          Traumatología, Pilates, entre otras. El abarcar un diverso abanico de
-          especialidades, tiene como objetivo brindar a cada paciente múltiples
-          posibilidades para el cuidado y su recuperación. En nuestro espacio
-          los pacientes van a encontrar profesionales con gran experiencia y
-          dedicación por mejorar la calidad de vida del paciente
-        </p>
+        <div class="md:flex">
+          <p
+            class="text-base text-gray-700 md:text-lg mx-auto w-[50%] h-[50%] my-20"
+          >
+            KYTOS es un centro de rehabilitación integral en el cual el paciente
+            puede encontrar diferentes alternativas según su caso, las cuales
+            van desde Rehabilitación deportiva, postural y técnicas manuales
+            hasta Terapia Ocupacional, Oftalmología, Psicología, Psicopedagogía,
+            Traumatología, Pilates, entre otras. El abarcar un diverso abanico
+            de especialidades, tiene como objetivo brindar a cada paciente
+            múltiples posibilidades para el cuidado y su recuperación. En
+            nuestro espacio los pacientes van a encontrar profesionales con gran
+            experiencia y dedicación por mejorar la calidad de vida del paciente
+          </p>
+          <img src="./img/frente1.jpeg" alt="frente local kytos" class=" md:w-[40%] h-[40%] mx-auto rounded-lg md:mt-20" />
+        </div>
       </div>
-
-      <img
-        src="./img/frente1.jpeg"
-        alt="logo kytos"
-        class="w-full xl:w-[50%] mx-auto rounded-lg"
-      />
     </div>
     <!-- HERO 2/SECTION 2 -->
     <div
-      class="grid grid-cols-1 my-32 p-10 space-y-6 lg:h-[38rem] lg:flex lg:py-16 lg:items-center xl:flex"
+      class="grid grid-cols-1 my-2 p-10 lg:h-[100%] lg:flex lg:items-center xl:flex shadow-2xl rounded-md w-[94%] mx-auto"
     >
-      <div class="w-full sm:w-[70%] lg:w-1/2 mx-auto">
-        <div class="bg-white rounded-lg p-20 shadow-2xl">
+      <div class="w-full sm:w-[70%] lg:w-full mx-auto">
+        <div class="bg-white rounded-lg p-10">
           <div class="relative inline-block">
             <span class="text-2xl md:text-3xl font-bold ml-10">
               Especialidades
@@ -746,11 +742,11 @@
         </div>
       </div>
 
-      <div class="items-center justify-center w-full h-96 lg:w-1/2">
+      <div class="items-center justify-center w-full h-96 lg:w-full">
         <img
           class="object-cover w-full h-full max-w-2xl rounded-md mx-auto"
           src="./img/espacio.jpeg"
-          alt="glasses photo"
+          alt="espacio de rehabilitacion"
         />
       </div>
     </div>
@@ -895,7 +891,7 @@
     </div>
 
     <!-- FOOTER -->
-    <footer class="bg-blue-900 h-[100%] text-white text-xl mt-10">
+    <footer class="bg-blue-900 h-96 text-white text-xl mt-10">
       <div
         class="px-4 pt-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8"
       >
@@ -1045,8 +1041,8 @@
                   aria-label="WhatsApp"
                   role="img"
                   viewBox="0 0 512 512"
-                  width="45px"
-                  height="45px"
+                  width="40px"
+                  height="40px"
                   fill="#000000"
                 >
                   <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
