--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@
       diversas actividades, como yoga y pilates
     </p>
     <div
-      class="grid grid-cols-2 md:grid-cols-4 gap-3 p-4 max-w-[70%] md:max-w-[70%] place-items-center mt-10 mx-auto"
+      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-3 p-4 max-w-[70%] md:max-w-[90%] place-items-center mt-10 mx-auto"
     >
       <div>
         <img class="h-auto rounded-lg" src="./img/espacio2.jpeg" alt="" />
